Refactor chunking settings from model settings to field inference request